# diplomova_praca

clusters/: CMakeLists.txt  chordlesscycles.cpp  chordlesscycles.h  clusters.pro  common.cpp  common.h  compute.cpp  compute.h  graphseparator.cpp  graphseparator.h  main.cpp  mainprogram.cpp  mainprogram.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  printclusters.cpp  printclusters.h  scanner.cpp  scanner.h  specifyclusters.cpp  specifyclusters.h
diplomovka/: CMakeLists.txt  Diplomovka.pro  chordlesscycles.cpp  chordlesscycles.h  common.cpp  common.h  compute.cpp  compute.h  cyclepermutation.cpp  cyclepermutation.h  findpermutation.cpp  findpermutation.h  graphseparator.cpp  graphseparator.h  main.cpp  mainprogram.cpp  mainprogram.h  mainwindow.cpp  mainwindow.ui  scanner.cpp  scanner.h
negat.subst/: CMakeLists.txt  chordlesscycles.cpp  common.cpp  common.h  findnegators.cpp  findnegators.h  findpermutation.cpp  graphseparator.cpp  graphseparator.h  main.cpp  scanner.cpp  scanner.h
starprod/: chordlesscycles.h  findpermutation.h  main.cpp
